# badal

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv
benches/: benchmarks.rs
docs/architecture/: math.md  overview.md
docs/development/: roadmap.md
examples/: basic.rs
src/: atmosphere.rs  bridge.rs  cloud.rs  coupling.rs  error.rs  lib.rs  logging.rs  mesoscale.rs  moisture.rs  precipitation.rs  pressure.rs  radiation.rs  severe.rs  stability.rs  thermal.rs  wind.rs
src/integration/: soorat.rs
tests/: integration.rs
