[package]
name = "badal"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0"
description = "Badal — weather and atmospheric modeling engine"
homepage = "https://github.com/MacCracken/badal"
repository = "https://github.com/MacCracken/badal"
readme = "README.md"
documentation = "https://docs.rs/badal"
keywords = ["weather", "atmosphere", "meteorology", "climate", "clouds"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
logging = ["dep:tracing-subscriber"]
thermo = ["dep:ushma"]
fluids = ["dep:pravash"]

[dependencies]
hisab = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
ushma = { version = "1", optional = true }
pravash = { version = "0.24", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
